@@ -1,0 +1,55 @@
+#tb 0: 1/25
+#media_type 0: video
+#codec_id 0: rawvideo
+#dimensions 0: 352x288
+#sar 0: 0/1
+0,          0,          0,        1,   152064, 0x25250b4b
+0,          1,          1,        1,   152064, 0x8d6ada7a
+0,          2,          2,        1,   152064, 0xc033c3d7
+0,          3,          3,        1,   152064, 0x035b5d08
+0,          4,          4,        1,   152064, 0x5841e969
+0,          5,          5,        1,   152064, 0x76b809b2
+0,          6,          6,        1,   152064, 0x1cfcd9c3
+0,          7,          7,        1,   152064, 0x663a42ec
+0,          8,          8,        1,   152064, 0x8230b191
+0,          9,          9,        1,   152064, 0xb9d627a3
+0,         10,         10,        1,   152064, 0xb3749370
+0,         11,         11,        1,   152064, 0x549f2eab
+0,         12,         12,        1,   152064, 0x257d1476
+0,         13,         13,        1,   152064, 0xd4c76aea
+0,         14,         14,        1,   152064, 0x315c9f3d
+0,         15,         15,        1,   152064, 0x80dff6df
+0,         16,         16,        1,   152064, 0xff2f8204
+0,         17,         17,        1,   152064, 0xdc17c361
+0,         18,         18,        1,   152064, 0xd62b4994
+0,         19,         19,        1,   152064, 0x4abecb92
+0,         20,         20,        1,   152064, 0x4fd133cd
+0,         21,         21,        1,   152064, 0x7ddcd920
+0,         22,         22,        1,   152064, 0x56a51c8c
+0,         23,         23,        1,   152064, 0x8d40c7bd
+0,         24,         24,        1,   152064, 0xbacc8929
+0,         25,         25,        1,   152064, 0x742ccb13
+0,         26,         26,        1,   152064, 0xb44b6ab4
+0,         27,         27,        1,   152064, 0x56372838
+0,         28,         28,        1,   152064, 0xa69fa9d7
+0,         29,         29,        1,   152064, 0x45786818
+0,         30,         30,        1,   152064, 0x3367c650
+0,         31,         31,        1,   152064, 0xe58ea325
+0,         32,         32,        1,   152064, 0xd4d8e1d2
+0,         33,         33,        1,   152064, 0x4c67987b
+0,         34,         34,        1,   152064, 0xc9b253c9
+0,         35,         35,        1,   152064, 0x8cf58fff
+0,         36,         36,        1,   152064, 0xe61519af
+0,         37,         37,        1,   152064, 0x8f314fcb
+0,         38,         38,        1,   152064, 0xf307d0ed
+0,         39,         39,        1,   152064, 0x025f5670
+0,         40,         40,        1,   152064, 0x95eeef9b
+0,         41,         41,        1,   152064, 0x0f316da1
+0,         42,         42,        1,   152064, 0x668bfa05
+0,         43,         43,        1,   152064, 0xdb00700a
+0,         44,         44,        1,   152064, 0x7a64f502
+0,         45,         45,        1,   152064, 0xef3e681c
+0,         46,         46,        1,   152064, 0x6152e8d0
+0,         47,         47,        1,   152064, 0x958b5a48
+0,         48,         48,        1,   152064, 0x66f2d7e7
+0,         49,         49,        1,   152064, 0x47da49fd
