@@ -12,6 +12,7 @@ version <next>:
 - enable gdigrab device to grab a window using the hwnd=HANDLER syntax
 - IAMF raw demuxer and muxer
 - D3D12VA hardware accelerated H264, HEVC, VP9, AV1, MPEG-2 and VC1 decoding
+- tiltandshift filter
 
 version 6.1:
 - libaribcaption decoder
